Update color scheme
I updated the color scheme of the personal website to use a nice purple background with white text. Additionally made some minor updates to the homepage content - small formatting differences.

--- a/index.html
+++ b/index.html
@@ -3,98 +3,106 @@
     <head>
         <meta charset="utf-8">
         <title>Zeko's Website</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Zeko Madson</h1>
         <h5>Brooklyn based BI Developer, Data Analyst, and aspiring Web Developer.</h5>
         <p>My passions include flash art, tattooes, movies, and going out to eat with buddies. </p>
-        <ul>Professional Experience
-            <ul>Reporting Analyst 4, AMN Healthcare
-                <ul>Job Overview
-                    <li>Transitioned the New Grad program into a PowerBI application eliminating 10+ hours of month end work by automating analysis and communication of clinician bonus eligibility to senior management.
-                        Owned the product development of an internal application tracking clinician application roadblocks resulting in a reduction of the average application time by over 5 days.
-                        Migrated 5 QlikSense reports relying on SQL to Snowflake and PowerBI reducing refresh time by over 35 minutes (~78%).
-                        Automated 5+ hours of weekly work by transitioning dynamic SQL into paginated reports.
-                    </li>
+        <div class="sub-section">
+            <ul>Professional Experience
+                <ul>Reporting Analyst 4, AMN Healthcare
+                    <ul>Job Overview
+                        <li>Transitioned the New Grad program into a PowerBI application eliminating 10+ hours of month end work by automating analysis and communication of clinician bonus eligibility to senior management.
+                            Owned the product development of an internal application tracking clinician application roadblocks resulting in a reduction of the average application time by over 5 days.
+                            Migrated 5 QlikSense reports relying on SQL to Snowflake and PowerBI reducing refresh time by over 35 minutes (~78%).
+                            Automated 5+ hours of weekly work by transitioning dynamic SQL into paginated reports.
+                        </li>
+                    </ul>
+                    <li>Skills/Tools Utilized: SQL, Snowflake, PowerBI, Excel, Azure, DevOps </li>
                 </ul>
-                <li>Skills/Tools Utilized: SQL, Snowflake, PowerBI, Excel, Azure, DevOps </li>
-            </ul>
-            <ul>Business Reporting Analyst, Baker Tilly US
-                <ul>Job Overview
-                    <li>Collaborated with the Finance department to build out a PowerBI application highlighting KPIs in resource management and adoption of business intelligence tools. 
-                        Built a revenue forecasting PowerBI application for the firm's Partners highlighting fiscal year performance in response to COVID-19.
-                        Optimized 20+ SQL views used by an internal application leading to a reduction in Help Desk tickets regarding application failure and data quality issues.
-                        Owned product development of a PowerBI application identifying over 40 reports for decommission based on usage over the past 2 fiscal years.
-                        Leveraged ticketing services such as ServiceNow and EasyVista to resolve 200+ ad hoc data and reporting requests.
-                        Updated date function that was source of data quality issue permeating through 150+ SQL data objects in the firm's production environment.
-                    </li>
+                <ul>Business Reporting Analyst, Baker Tilly US
+                    <ul>Job Overview
+                        <li>Collaborated with the Finance department to build out a PowerBI application highlighting KPIs in resource management and adoption of business intelligence tools. 
+                            Built a revenue forecasting PowerBI application for the firm's Partners highlighting fiscal year performance in response to COVID-19.
+                            Optimized 20+ SQL views used by an internal application leading to a reduction in Help Desk tickets regarding application failure and data quality issues.
+                            Owned product development of a PowerBI application identifying over 40 reports for decommission based on usage over the past 2 fiscal years.
+                            Leveraged ticketing services such as ServiceNow and EasyVista to resolve 200+ ad hoc data and reporting requests.
+                            Updated date function that was source of data quality issue permeating through 150+ SQL data objects in the firm's production environment.
+                        </li>
+                    </ul>
+                    <li>Skills/Tools Utilized: SQL, PowerBI, SSRS, Excel, Azure, DevOps</li>
                 </ul>
-                <li>Skills/Tools Utilized: SQL, PowerBI, SSRS, Excel, Azure, DevOps</li>
-            </ul>
-            <ul>IT Analyst, Ecolab
-                <ul>Job Overview
-                    <li>Managed 8-member international team, tracking progress, resolving roadblocks, and maintaining the product backlog in Azure DevOps in order to deliver an enterprise-wide ChatBot.
-                        Served in Project Manager, Business Analyst, and BI Developer roles to assist in the deployment of 60 Marketing, Sales, and Finance reports for the Healthcare department.
-                        Gathered requirements, lead UAT, and orchestrated Go-Live plan of over 10 compensation and bonus reports for the Field Operations Finance team.
-                        Managed the retirement and migration of 100+ Windows 2008 servers across the firm.
-                        Constructed department's production release notes providing Ecolab leadership with a high-level view of business impact from completed development.
-                    </li>
+                <ul>IT Analyst, Ecolab
+                    <ul>Job Overview
+                        <li>Managed 8-member international team, tracking progress, resolving roadblocks, and maintaining the product backlog in Azure DevOps in order to deliver an enterprise-wide ChatBot.
+                            Served in Project Manager, Business Analyst, and BI Developer roles to assist in the deployment of 60 Marketing, Sales, and Finance reports for the Healthcare department.
+                            Gathered requirements, lead UAT, and orchestrated Go-Live plan of over 10 compensation and bonus reports for the Field Operations Finance team.
+                            Managed the retirement and migration of 100+ Windows 2008 servers across the firm.
+                            Constructed department's production release notes providing Ecolab leadership with a high-level view of business impact from completed development.
+                        </li>
+                    </ul>
+                    <li>PowerBI, SQL, Excel, DevOps, AdobeXD</li>
                 </ul>
-                <li>PowerBI, SQL, Excel, DevOps, AdobeXD</li>
-            </ul>
-            <ul>IT Intern, Ecolab
-                <ul>Job Overview
-                    <li>Built a PowerBI dashboard highlighting the computational costs associated with Microsoft Azure resulting in optimizations, saving the IT department over $50,000 in under 4 months.
-                        Served in Project Manager, Business Analyst, and BI Developer roles assisting in the development of 60+ enterprise reports.
-                    </li>
+                <ul>IT Intern, Ecolab
+                    <ul>Job Overview
+                        <li>Built a PowerBI dashboard highlighting the computational costs associated with Microsoft Azure resulting in optimizations, saving the IT department over $50,000 in under 4 months.
+                            Served in Project Manager, Business Analyst, and BI Developer roles assisting in the development of 60+ enterprise reports.
+                        </li>
+                    </ul>
+                    <li>Skills/Tools Utilized: PowerBI, Excel, DevOps</li>
                 </ul>
-                <li>Skills/Tools Utilized: PowerBI, Excel, DevOps</li>
-            </ul>
-            <ul>Electrical Engineering Intern, Astronautics Corporation of America
-                <ul>Job Overview
-                    <li>Utilized Excel VBA to analyze over 10,000 flight records to verify the failure rates of electrical components found in the company's Aerospace and Astronautic products.
-                    </li>
+                <ul>Electrical Engineering Intern, Astronautics Corporation of America
+                    <ul>Job Overview
+                        <li>Utilized Excel VBA to analyze over 10,000 flight records to verify the failure rates of electrical components found in the company's Aerospace and Astronautic products.
+                        </li>
+                    </ul>
+                    <li>Skills/Tools Utilized: Excel, VBA</li>
                 </ul>
-                <li>Skills/Tools Utilized: Excel, VBA</li>
-            </ul>
-        </ul>
-        <ul>Side Projects
-            <ul>Project 1: Personal Website
-                <ul>Project Overview
-                    <li>I built a personal website to provide insight on all my professional-related development. 
-                        This is an effort to showcase what I've been able to accomplish in a proffessional setting as well some of my interests outside of my day to day. Please enjoy! 
-                    </li>
+            </ul>    
+        </div>
+        <div class="sub-section">
+            <ul>Side Projects
+                <ul>Project 1: Personal Website
+                    <ul>Project Overview
+                        <li>I built a personal website to provide insight on all my professional-related development. 
+                            This is an effort to showcase what I've been able to accomplish in a proffessional setting as well some of my interests outside of my day to day. Please enjoy! 
+                        </li>
+                    </ul>
+                    <li>What skills I learned: JavaScript, HTML, CSS, Git</li>
+                    <li><a href="#">Link to site</a></li>
                 </ul>
-                <li>What skills I learned: JavaScript, HTML, CSS, Git</li>
-                <li><a href="#">Link to site</a></li>
-            </ul>
-            <ul>Project 2: Pokemon Comparison
-                <ul>Brief Project Description
-                    <li>I built a model in python that compares male and female soccer players to their equivalent in the Pokemon (gen 1) universe. 
-                        This model utilizes over X many (non-physical) features to analyze and predict their equivalent. 
-                        The goal of this project is to showcase my ability to work with mulitple large datasets, understand basic concepts in Python and Pandas, and most importantly find a fun project to complete in Python.
-                    </li>
+                <ul>Project 2: Pokemon Comparison
+                    <ul>Brief Project Description
+                        <li>I built a model in python that compares male and female soccer players to their equivalent in the Pokemon (gen 1) universe. 
+                            This model utilizes over X many (non-physical) features to analyze and predict their equivalent. 
+                            The goal of this project is to showcase my ability to work with mulitple large datasets, understand basic concepts in Python and Pandas, and most importantly find a fun project to complete in Python.
+                        </li>
+                    </ul>
+                    <li>What skills I learned: Python, Pandas, JavaScript, HMTL, CSS, Git,</li>
+                    <li><a href="#">Link to site</a></li>
                 </ul>
-                <li>What skills I learned: Python, Pandas, JavaScript, HMTL, CSS, Git,</li>
-                <li><a href="#">Link to site</a></li>
-            </ul>
-            <ul>Project 3: Recipe Converter
-                <ul>Brief Project Description
-                    <li>This project was a last minute addition inspired by the frustration of finding holiday related recipes for a gathering with my friends.
-                        All online recipes seem to have a horrible habit of wrapping a simple list of ingredients and steps with a 1000 word life story of the writer. 
-                        The sole purpose of this website is to eliminate the bullshit that encompasses these great recipes. 
-                    </li>
+                <ul>Project 3: Recipe Converter
+                    <ul>Brief Project Description
+                        <li>This project was a last minute addition inspired by the frustration of finding holiday related recipes for a gathering with my friends.
+                            All online recipes seem to have a horrible habit of wrapping a simple list of ingredients and steps with a 1000 word life story of the writer. 
+                            The sole purpose of this website is to eliminate the bullshit that encompasses these great recipes. 
+                        </li>
+                    </ul>
+                    <li>What skills I learned: html, css, javascript, Python, Pandas, git</li>
+                    <li><a href="#">Link to site</a></li>
                 </ul>
-                <li>What skills I learned: html, css, javascript, Python, Pandas, git</li>
-                <li><a href="#">Link to site</a></li>
             </ul>
-        </ul>
-        <h3>Links</h3>
+        </div>
+        <div class="sub-section">
+            <h3>Links</h3>
             <a href="https://www.linkedin.com/in/zmadson/">Github</a>
             <a href="https://www.linkedin.com/in/zmadson/">LinkedIn</a>
             <a href="#">Resume</a>
             <a href="#">Project 1</a>
             <a href="#">Project 2</a>
             <a href="#">Project 3</a>
+        </div>
+        
     </body>
 </html>
