--- a/index.html
+++ b/index.html
@@ -6,24 +6,30 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Zeko Madson</h1>
-        <h5>Brooklyn based BI Developer, Data Analyst, and aspiring Web Developer.</h5>
-        <p>My passions include flash art, tattooes, movies, and going out to eat with buddies. </p>
-        <div class="sub-section">
+        <header>
+            <h1 class="header nameplate">Zeko Madson</h1>
+            <h4 class="header aspirations">Brooklyn based BI Developer, Data Analyst, and aspiring Web Developer.</h5>
+            <h4 class="header description">My passions include flash art, tattooes, movies, and going out to eat with buddies. </p>
+            <ul>
+                <li><a href="class">Professional Experience</a></li>
+                <li><a href="projects">Projects</a></li>
+            </ul>
+            </header>
+        <div class="professional-experience">
             <ul>Professional Experience
                 <ul>Reporting Analyst 4, AMN Healthcare
                     <ul>Job Overview
-                        <li>Transitioned the New Grad program into a PowerBI application eliminating 10+ hours of month end work by automating analysis and communication of clinician bonus eligibility to senior management.
+                        <li class="job-desc">Transitioned the New Grad program into a PowerBI application eliminating 10+ hours of month end work by automating analysis and communication of clinician bonus eligibility to senior management.
                             Owned the product development of an internal application tracking clinician application roadblocks resulting in a reduction of the average application time by over 5 days.
                             Migrated 5 QlikSense reports relying on SQL to Snowflake and PowerBI reducing refresh time by over 35 minutes (~78%).
                             Automated 5+ hours of weekly work by transitioning dynamic SQL into paginated reports.
                         </li>
                     </ul>
-                    <li>Skills/Tools Utilized: SQL, Snowflake, PowerBI, Excel, Azure, DevOps </li>
+                    <li class="job-skills">Skills/Tools Utilized: SQL, Snowflake, PowerBI, Excel, Azure, DevOps </li>
                 </ul>
                 <ul>Business Reporting Analyst, Baker Tilly US
                     <ul>Job Overview
-                        <li>Collaborated with the Finance department to build out a PowerBI application highlighting KPIs in resource management and adoption of business intelligence tools. 
+                        <li class="job-desc">Collaborated with the Finance department to build out a PowerBI application highlighting KPIs in resource management and adoption of business intelligence tools. 
                             Built a revenue forecasting PowerBI application for the firm's Partners highlighting fiscal year performance in response to COVID-19.
                             Optimized 20+ SQL views used by an internal application leading to a reduction in Help Desk tickets regarding application failure and data quality issues.
                             Owned product development of a PowerBI application identifying over 40 reports for decommission based on usage over the past 2 fiscal years.
@@ -31,22 +37,22 @@
                             Updated date function that was source of data quality issue permeating through 150+ SQL data objects in the firm's production environment.
                         </li>
                     </ul>
-                    <li>Skills/Tools Utilized: SQL, PowerBI, SSRS, Excel, Azure, DevOps</li>
+                    <li class="job-skills">Skills/Tools Utilized: SQL, PowerBI, SSRS, Excel, Azure, DevOps</li>
                 </ul>
                 <ul>IT Analyst, Ecolab
                     <ul>Job Overview
-                        <li>Managed 8-member international team, tracking progress, resolving roadblocks, and maintaining the product backlog in Azure DevOps in order to deliver an enterprise-wide ChatBot.
+                        <li class="job-desc">Managed 8-member international team, tracking progress, resolving roadblocks, and maintaining the product backlog in Azure DevOps in order to deliver an enterprise-wide ChatBot.
                             Served in Project Manager, Business Analyst, and BI Developer roles to assist in the deployment of 60 Marketing, Sales, and Finance reports for the Healthcare department.
                             Gathered requirements, lead UAT, and orchestrated Go-Live plan of over 10 compensation and bonus reports for the Field Operations Finance team.
                             Managed the retirement and migration of 100+ Windows 2008 servers across the firm.
                             Constructed department's production release notes providing Ecolab leadership with a high-level view of business impact from completed development.
                         </li>
                     </ul>
-                    <li>PowerBI, SQL, Excel, DevOps, AdobeXD</li>
+                    <li class="job-skills">PowerBI, SQL, Excel, DevOps, AdobeXD</li>
                 </ul>
                 <ul>IT Intern, Ecolab
                     <ul>Job Overview
-                        <li>Built a PowerBI dashboard highlighting the computational costs associated with Microsoft Azure resulting in optimizations, saving the IT department over $50,000 in under 4 months.
+                        <li class="job-desc">Built a PowerBI dashboard highlighting the computational costs associated with Microsoft Azure resulting in optimizations, saving the IT department over $50,000 in under 4 months.
                             Served in Project Manager, Business Analyst, and BI Developer roles assisting in the development of 60+ enterprise reports.
                         </li>
                     </ul>
@@ -54,14 +60,14 @@
                 </ul>
                 <ul>Electrical Engineering Intern, Astronautics Corporation of America
                     <ul>Job Overview
-                        <li>Utilized Excel VBA to analyze over 10,000 flight records to verify the failure rates of electrical components found in the company's Aerospace and Astronautic products.
+                        <li class="job-desc">Utilized Excel VBA to analyze over 10,000 flight records to verify the failure rates of electrical components found in the company's Aerospace and Astronautic products.
                         </li>
                     </ul>
-                    <li>Skills/Tools Utilized: Excel, VBA</li>
+                    <li class="job-skills">Skills/Tools Utilized: Excel, VBA</li>
                 </ul>
             </ul>    
         </div>
-        <div class="sub-section">
+        <div class="personal-projects">
             <ul>Side Projects
                 <ul>Project 1: Personal Website
                     <ul>Project Overview
@@ -94,7 +100,7 @@
                 </ul>
             </ul>
         </div>
-        <div class="sub-section">
+        <div class="links">
             <h3>Links</h3>
             <a href="https://www.linkedin.com/in/zmadson/">Github</a>
             <a href="https://www.linkedin.com/in/zmadson/">LinkedIn</a>
