Generate horizontal navbar
Gernated a horizontal navbar using the flexbox model. Included a border as well.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
             <h1 class="header nameplate">Zeko Madson</h1>
             <h4 class="header aspirations">Brooklyn based BI Developer, Data Analyst, and aspiring Web Developer.</h5>
             <h4 class="header description">My passions include flash art, tattooes, movies, and going out to eat with buddies. </p>
-            <ul>
-                <li><a href="class">Professional Experience</a></li>
-                <li><a href="projects">Projects</a></li>
+            <nav class="horizontal-navbar">
+                <div class="navbar-item"><a href="class">Professional Experience</a></div>
+                <div class="navbar-item"><a href="projects">Projects</a></div>
             </ul>
             </header>
         <div class="professional-experience">
