Add horizontal flexbox navbar
Update the navigation bar to contain all items / selections in one row. Additionally, add a Contact Me button and update the links section to be called Contact

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
             <h1 class="header nameplate">Zeko Madson</h1>
             <h4 class="header aspirations">Brooklyn based BI Developer, Data Analyst, and aspiring Web Developer.</h5>
             <h4 class="header description">My passions include flash art, tattooes, movies, and going out to eat with buddies. </p>
-            <nav class="horizontal-navbar">
-                <div class="navbar-item"><a href="class">Professional Experience</a></div>
+            <nav class="navbar">
+                <div class="navbar-item"><a href="professional-experience">Professional Experience</a></div>
                 <div class="navbar-item"><a href="projects">Projects</a></div>
-            </ul>
+                <div class="navbar-item"><a href="contact">Contact</a></div>
+            </nav>
             </header>
         <div class="professional-experience">
             <ul>Professional Experience
@@ -100,8 +101,8 @@
                 </ul>
             </ul>
         </div>
-        <div class="links">
-            <h3>Links</h3>
+        <div class="contact">
+            <h3>Contact Information</h3>
             <a href="https://www.linkedin.com/in/zmadson/">Github</a>
             <a href="https://www.linkedin.com/in/zmadson/">LinkedIn</a>
             <a href="#">Resume</a>
