Add borders to professional roles
Addition of borders and margins between each professional role. This is to help visualize the website formatting

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <body>
         <header>
             <h1 class="header nameplate">Zeko Madson</h1>
-            <h4 class="header aspirations">Brooklyn based BI Developer, Data Analyst, and aspiring Web Developer.</h5>
-            <h4 class="header description">My passions include flash art, tattooes, movies, and going out to eat with buddies. </p>
+            <h4 class="header aspirations">Brooklyn based BI Developer, Data Analyst, Data Engineer, and aspiring Web Developer.</h5>
             <nav class="navbar">
                 <div class="navbar-item"><a href="professional-experience">Professional Experience</a></div>
                 <div class="navbar-item"><a href="projects">Projects</a></div>
@@ -18,7 +17,7 @@
             </header>
         <div class="professional-experience">
             <ul>Professional Experience
-                <ul>Reporting Analyst 4, AMN Healthcare
+                <ul class="role">Reporting Analyst 4, AMN Healthcare
                     <ul>Job Overview
                         <li class="job-desc">Transitioned the New Grad program into a PowerBI application eliminating 10+ hours of month end work by automating analysis and communication of clinician bonus eligibility to senior management.
                             Owned the product development of an internal application tracking clinician application roadblocks resulting in a reduction of the average application time by over 5 days.
@@ -28,7 +27,7 @@
                     </ul>
                     <li class="job-skills">Skills/Tools Utilized: SQL, Snowflake, PowerBI, Excel, Azure, DevOps </li>
                 </ul>
-                <ul>Business Reporting Analyst, Baker Tilly US
+                <ul class="role">Business Reporting Analyst, Baker Tilly US
                     <ul>Job Overview
                         <li class="job-desc">Collaborated with the Finance department to build out a PowerBI application highlighting KPIs in resource management and adoption of business intelligence tools. 
                             Built a revenue forecasting PowerBI application for the firm's Partners highlighting fiscal year performance in response to COVID-19.
@@ -40,7 +39,7 @@
                     </ul>
                     <li class="job-skills">Skills/Tools Utilized: SQL, PowerBI, SSRS, Excel, Azure, DevOps</li>
                 </ul>
-                <ul>IT Analyst, Ecolab
+                <ul class="role">IT Analyst, Ecolab
                     <ul>Job Overview
                         <li class="job-desc">Managed 8-member international team, tracking progress, resolving roadblocks, and maintaining the product backlog in Azure DevOps in order to deliver an enterprise-wide ChatBot.
                             Served in Project Manager, Business Analyst, and BI Developer roles to assist in the deployment of 60 Marketing, Sales, and Finance reports for the Healthcare department.
@@ -51,7 +50,7 @@
                     </ul>
                     <li class="job-skills">PowerBI, SQL, Excel, DevOps, AdobeXD</li>
                 </ul>
-                <ul>IT Intern, Ecolab
+                <ul class="role">IT Intern, Ecolab
                     <ul>Job Overview
                         <li class="job-desc">Built a PowerBI dashboard highlighting the computational costs associated with Microsoft Azure resulting in optimizations, saving the IT department over $50,000 in under 4 months.
                             Served in Project Manager, Business Analyst, and BI Developer roles assisting in the development of 60+ enterprise reports.
@@ -59,7 +58,7 @@
                     </ul>
                     <li>Skills/Tools Utilized: PowerBI, Excel, DevOps</li>
                 </ul>
-                <ul>Electrical Engineering Intern, Astronautics Corporation of America
+                <ul class="role">Electrical Engineering Intern, Astronautics Corporation of America
                     <ul>Job Overview
                         <li class="job-desc">Utilized Excel VBA to analyze over 10,000 flight records to verify the failure rates of electrical components found in the company's Aerospace and Astronautic products.
                         </li>
