Add job-overview class to index.html
Addition of the job-overview class to the html file. Moving forward this class/item would be used to toggle the details of a job description.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="professional-experience">
             <ul>Professional Experience
                 <ul class="role">Reporting Analyst 4, AMN Healthcare
-                    <ul>Job Overview
+                    <ul class="job-overview">Job Overview
                         <li class="job-desc">Transitioned the New Grad program into a PowerBI application eliminating 10+ hours of month end work by automating analysis and communication of clinician bonus eligibility to senior management.
                             Owned the product development of an internal application tracking clinician application roadblocks resulting in a reduction of the average application time by over 5 days.
                             Migrated 5 QlikSense reports relying on SQL to Snowflake and PowerBI reducing refresh time by over 35 minutes (~78%).
@@ -28,7 +28,7 @@
                     <li class="job-skills">Skills/Tools Utilized: SQL, Snowflake, PowerBI, Excel, Azure, DevOps </li>
                 </ul>
                 <ul class="role">Business Reporting Analyst, Baker Tilly US
-                    <ul>Job Overview
+                    <ul class="job-overview">Job Overview
                         <li class="job-desc">Collaborated with the Finance department to build out a PowerBI application highlighting KPIs in resource management and adoption of business intelligence tools. 
                             Built a revenue forecasting PowerBI application for the firm's Partners highlighting fiscal year performance in response to COVID-19.
                             Optimized 20+ SQL views used by an internal application leading to a reduction in Help Desk tickets regarding application failure and data quality issues.
@@ -40,7 +40,7 @@
                     <li class="job-skills">Skills/Tools Utilized: SQL, PowerBI, SSRS, Excel, Azure, DevOps</li>
                 </ul>
                 <ul class="role">IT Analyst, Ecolab
-                    <ul>Job Overview
+                    <ul class="job-overview">Job Overview
                         <li class="job-desc">Managed 8-member international team, tracking progress, resolving roadblocks, and maintaining the product backlog in Azure DevOps in order to deliver an enterprise-wide ChatBot.
                             Served in Project Manager, Business Analyst, and BI Developer roles to assist in the deployment of 60 Marketing, Sales, and Finance reports for the Healthcare department.
                             Gathered requirements, lead UAT, and orchestrated Go-Live plan of over 10 compensation and bonus reports for the Field Operations Finance team.
@@ -51,7 +51,7 @@
                     <li class="job-skills">PowerBI, SQL, Excel, DevOps, AdobeXD</li>
                 </ul>
                 <ul class="role">IT Intern, Ecolab
-                    <ul>Job Overview
+                    <ul class="job-overview">Job Overview
                         <li class="job-desc">Built a PowerBI dashboard highlighting the computational costs associated with Microsoft Azure resulting in optimizations, saving the IT department over $50,000 in under 4 months.
                             Served in Project Manager, Business Analyst, and BI Developer roles assisting in the development of 60+ enterprise reports.
                         </li>
@@ -59,7 +59,7 @@
                     <li>Skills/Tools Utilized: PowerBI, Excel, DevOps</li>
                 </ul>
                 <ul class="role">Electrical Engineering Intern, Astronautics Corporation of America
-                    <ul>Job Overview
+                    <ul clsas="job-overviews">Job Overview
                         <li class="job-desc">Utilized Excel VBA to analyze over 10,000 flight records to verify the failure rates of electrical components found in the company's Aerospace and Astronautic products.
                         </li>
                     </ul>
