Create border class for containers
Creation of 'solid black border' class that will be utilized in all subsections for design and test purposes

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
             <h1 class="header nameplate">Zeko Madson</h1>
             <h4 class="header aspirations">Brooklyn based BI Developer, Data Analyst, Data Engineer, and aspiring Web Developer.</h5>
             <nav class="navbar">
-                <div class="navbar-item"><a href="professional-experience">Professional Experience</a></div>
-                <div class="navbar-item"><a href="projects">Projects</a></div>
-                <div class="navbar-item"><a href="contact">Contact</a></div>
+                <div class="navbar-item solid-black-border"><a href="professional-experience">Professional Experience</a></div>
+                <div class="navbar-item solid-black-border"><a href="projects">Projects</a></div>
+                <div class="navbar-item solid-black-border"><a href="contact">Contact</a></div>
             </nav>
             </header>
         <div class="professional-experience">
-            <ul>Professional Experience
-                <ul class="role">Reporting Analyst 4, AMN Healthcare
+            <ul class="section-header">Professional Experience
+                <ul class="role solid-black-border">Reporting Analyst 4, AMN Healthcare
                     <ul class="job-overview">Job Overview
                         <li class="job-desc">Transitioned the New Grad program into a PowerBI application eliminating 10+ hours of month end work by automating analysis and communication of clinician bonus eligibility to senior management.
                             Owned the product development of an internal application tracking clinician application roadblocks resulting in a reduction of the average application time by over 5 days.
@@ -25,9 +25,9 @@
                             Automated 5+ hours of weekly work by transitioning dynamic SQL into paginated reports.
                         </li>
                     </ul>
-                    <li class="job-skills">Skills/Tools Utilized: SQL, Snowflake, PowerBI, Excel, Azure, DevOps </li>
+                    <li class="job-skills">Tech Stack: SQL, Snowflake, PowerBI, Excel, Azure, DevOps </li>
                 </ul>
-                <ul class="role">Business Reporting Analyst, Baker Tilly US
+                <ul class="role solid-black-border">Business Reporting Analyst, Baker Tilly US
                     <ul class="job-overview">Job Overview
                         <li class="job-desc">Collaborated with the Finance department to build out a PowerBI application highlighting KPIs in resource management and adoption of business intelligence tools. 
                             Built a revenue forecasting PowerBI application for the firm's Partners highlighting fiscal year performance in response to COVID-19.
@@ -37,9 +37,9 @@
                             Updated date function that was source of data quality issue permeating through 150+ SQL data objects in the firm's production environment.
                         </li>
                     </ul>
-                    <li class="job-skills">Skills/Tools Utilized: SQL, PowerBI, SSRS, Excel, Azure, DevOps</li>
+                    <li class="job-skills">Tech Stack: SQL, PowerBI, SSRS, Excel, Azure, DevOps</li>
                 </ul>
-                <ul class="role">IT Analyst, Ecolab
+                <ul class="role solid-black-border">IT Analyst, Ecolab
                     <ul class="job-overview">Job Overview
                         <li class="job-desc">Managed 8-member international team, tracking progress, resolving roadblocks, and maintaining the product backlog in Azure DevOps in order to deliver an enterprise-wide ChatBot.
                             Served in Project Manager, Business Analyst, and BI Developer roles to assist in the deployment of 60 Marketing, Sales, and Finance reports for the Healthcare department.
@@ -48,67 +48,66 @@
                             Constructed department's production release notes providing Ecolab leadership with a high-level view of business impact from completed development.
                         </li>
                     </ul>
-                    <li class="job-skills">PowerBI, SQL, Excel, DevOps, AdobeXD</li>
+                    <li class="job-skills">Skills/Tools Utilized: PowerBI, SQL, Excel, DevOps, AdobeXD</li>
                 </ul>
-                <ul class="role">IT Intern, Ecolab
+                <ul class="role solid-black-border">IT Intern, Ecolab
                     <ul class="job-overview">Job Overview
                         <li class="job-desc">Built a PowerBI dashboard highlighting the computational costs associated with Microsoft Azure resulting in optimizations, saving the IT department over $50,000 in under 4 months.
                             Served in Project Manager, Business Analyst, and BI Developer roles assisting in the development of 60+ enterprise reports.
                         </li>
                     </ul>
-                    <li>Skills/Tools Utilized: PowerBI, Excel, DevOps</li>
+                    <li>Tech Stack: PowerBI, Excel, DevOps</li>
                 </ul>
-                <ul class="role">Electrical Engineering Intern, Astronautics Corporation of America
+                <ul class="role solid-black-border">Electrical Engineering Intern, Astronautics Corporation of America
                     <ul clsas="job-overviews">Job Overview
                         <li class="job-desc">Utilized Excel VBA to analyze over 10,000 flight records to verify the failure rates of electrical components found in the company's Aerospace and Astronautic products.
                         </li>
                     </ul>
-                    <li class="job-skills">Skills/Tools Utilized: Excel, VBA</li>
+                    <li class="job-skills">Tech Stack: Excel, VBA</li>
                 </ul>
             </ul>    
         </div>
         <div class="personal-projects">
-            <ul>Side Projects
-                <ul>Project 1: Personal Website
+            <ul class="section-header">Side Projects
+                <ul class="project solid-black-border">Project 1: Personal Website
                     <ul>Project Overview
                         <li>I built a personal website to provide insight on all my professional-related development. 
                             This is an effort to showcase what I've been able to accomplish in a proffessional setting as well some of my interests outside of my day to day. Please enjoy! 
                         </li>
                     </ul>
-                    <li>What skills I learned: JavaScript, HTML, CSS, Git</li>
-                    <li><a href="#">Link to site</a></li>
+                    <li>Tech Stack: JavaScript, HTML, CSS, Git</li>
                 </ul>
-                <ul>Project 2: Pokemon Comparison
+                <ul class="project solid-black-border">Project 2: Pokemon Comparison
                     <ul>Brief Project Description
                         <li>I built a model in python that compares male and female soccer players to their equivalent in the Pokemon (gen 1) universe. 
                             This model utilizes over X many (non-physical) features to analyze and predict their equivalent. 
                             The goal of this project is to showcase my ability to work with mulitple large datasets, understand basic concepts in Python and Pandas, and most importantly find a fun project to complete in Python.
                         </li>
                     </ul>
-                    <li>What skills I learned: Python, Pandas, JavaScript, HMTL, CSS, Git,</li>
+                    <li>Tech Stack: Python, Pandas, JavaScript, HMTL, CSS, Git,</li>
                     <li><a href="#">Link to site</a></li>
                 </ul>
-                <ul>Project 3: Recipe Converter
+                <ul class="project solid-black-border">Project 3: Recipe Converter
                     <ul>Brief Project Description
                         <li>This project was a last minute addition inspired by the frustration of finding holiday related recipes for a gathering with my friends.
                             All online recipes seem to have a horrible habit of wrapping a simple list of ingredients and steps with a 1000 word life story of the writer. 
                             The sole purpose of this website is to eliminate the bullshit that encompasses these great recipes. 
                         </li>
                     </ul>
-                    <li>What skills I learned: html, css, javascript, Python, Pandas, git</li>
+                    <li>Tech Stack: HTML, CSS, JavaScript, Python, Pandas, Git</li>
                     <li><a href="#">Link to site</a></li>
                 </ul>
             </ul>
         </div>
         <div class="contact">
-            <h3>Contact Information</h3>
-            <a href="https://www.linkedin.com/in/zmadson/">Github</a>
-            <a href="https://www.linkedin.com/in/zmadson/">LinkedIn</a>
-            <a href="#">Resume</a>
-            <a href="#">Project 1</a>
-            <a href="#">Project 2</a>
-            <a href="#">Project 3</a>
+            <ul class="section-header">Contact Information
+                <li class="link solid-black-border"><a href="https://www.linkedin.com/in/zmadson/">Github</a></li>
+                <li class="link solid-black-border"><a href="https://www.linkedin.com/in/zmadson/">LinkedIn</a></li>
+                <li class="link solid-black-border"><a href="#">Resume</a></li>
+                <li class="link solid-black-border"><a href="#">Recipe Reducer</a></li>
+                <li class="link solid-black-border"><a href="#">Project 2</a></li>
+                <li class="link solid-black-border"> <a href="#">Project 3</a></li>
+            </ul> 
         </div>
-        
     </body>
 </html>
