--- a/index.html
+++ b/index.html
@@ -7,29 +7,46 @@
     </head>
     <body>
         <header>
-            <h1 class="header nameplate">Zeko Madson</h1>
-            <h4 class="header aspirations">Brooklyn based BI Developer, Data Analyst, Data Engineer, and aspiring Web Developer.</h5>
-            <nav class="navbar">
-                <div class="navbar-item solid-black-border"><a href="professional-experience">Professional Experience</a></div>
-                <div class="navbar-item solid-black-border"><a href="projects">Projects</a></div>
-                <div class="navbar-item solid-black-border"><a href="contact">Contact</a></div>
-            </nav>
-            </header>
-        <div class="professional-experience">
-            <ul class="section-header">Professional Experience
-                <ul class="role solid-black-border">Reporting Analyst 4, AMN Healthcare
-                    <ul class="job-overview">Job Overview
-                        <li class="job-desc">Transitioned the New Grad program into a PowerBI application eliminating 10+ hours of month end work by automating analysis and communication of clinician bonus eligibility to senior management.
+            <h1 class="header">Zeko Madson</h1>
+            <h4>Brooklyn based BI Developer, Data Analyst, Data Engineer, and aspiring Web Developer.</h5>
+            <div class="nav-block">
+                <nav class="main-nav solid-black-border">
+                    <ul>
+                        <div class="sub-nav solid-black-border">
+                            <ul class="navbar-item"> About
+                                <li class="sub-navbar-item hidden"><a href="about">About</a></li>
+                                <li class="sub-navbar-item hidden"><a href="contact">Contact</a></li>
+                            </ul>
+                        </div>
+                        <div class="sub-nav solid-black-border">
+                            <ul class="navbar-item">Professional Experience
+                                <li class="navbar-item solid-black-border hidden"><a href="#professional-experience">Professional Experience</a></li>
+                            </ul>
+                        </div>
+                        <div class="sub-nav solid-black-border">
+                            <ul class="navbar-item">Projects
+                                <li class="sub-nav navbar-item solid-black-border hidden"><a href="#projects">Projects</a></li>
+                            </ul>
+                        </div>
+                    </ul>
+                </nav>       
+            </div>
+        </header>   
+        <div>
+            <ul>Professional Experience
+                <ul class="solid-black-border title"><h2 class="title">Reporting Analyst 4, AMN Healthcare</h2>
+                    <ul class="detail-toggle">Job Overview
+                        <li class="hidden">Transitioned the New Grad program into a PowerBI application eliminating 10+ hours of month end work by automating analysis and communication of clinician bonus eligibility to senior management.
                             Owned the product development of an internal application tracking clinician application roadblocks resulting in a reduction of the average application time by over 5 days.
                             Migrated 5 QlikSense reports relying on SQL to Snowflake and PowerBI reducing refresh time by over 35 minutes (~78%).
                             Automated 5+ hours of weekly work by transitioning dynamic SQL into paginated reports.
                         </li>
                     </ul>
-                    <li class="job-skills">Tech Stack: SQL, Snowflake, PowerBI, Excel, Azure, DevOps </li>
+                    <li>Tech Stack: SQL, Snowflake, PowerBI, Excel, Azure, DevOps </li>
                 </ul>
-                <ul class="role solid-black-border">Business Reporting Analyst, Baker Tilly US
-                    <ul class="job-overview">Job Overview
-                        <li class="job-desc">Collaborated with the Finance department to build out a PowerBI application highlighting KPIs in resource management and adoption of business intelligence tools. 
+                <ul class="solid-black-border title"><h2 class="title">Business Reporting Analyst, Baker Tilly US</h2>
+                    <ul class="detail-toggle">Job Overview
+                        <li class="hidden">Collaborated with the Finance department to build out a PowerBI application highlighting KPIs in resource management and adoption of business intelligence tools. 
                             Built a revenue forecasting PowerBI application for the firm's Partners highlighting fiscal year performance in response to COVID-19.
                             Optimized 20+ SQL views used by an internal application leading to a reduction in Help Desk tickets regarding application failure and data quality issues.
                             Owned product development of a PowerBI application identifying over 40 reports for decommission based on usage over the past 2 fiscal years.
@@ -37,48 +54,48 @@
                             Updated date function that was source of data quality issue permeating through 150+ SQL data objects in the firm's production environment.
                         </li>
                     </ul>
-                    <li class="job-skills">Tech Stack: SQL, PowerBI, SSRS, Excel, Azure, DevOps</li>
+                    <li>Tech Stack: SQL, PowerBI, SSRS, Excel, Azure, DevOps</li>
                 </ul>
-                <ul class="role solid-black-border">IT Analyst, Ecolab
-                    <ul class="job-overview">Job Overview
-                        <li class="job-desc">Managed 8-member international team, tracking progress, resolving roadblocks, and maintaining the product backlog in Azure DevOps in order to deliver an enterprise-wide ChatBot.
+                <ul class="solid-black-border title"><p class="title">IT Analyst, Ecolab</p>
+                    <ul class="detail-toggle">Job Overview
+                        <li class="hidden">Managed 8-member international team, tracking progress, resolving roadblocks, and maintaining the product backlog in Azure DevOps in order to deliver an enterprise-wide ChatBot.
                             Served in Project Manager, Business Analyst, and BI Developer roles to assist in the deployment of 60 Marketing, Sales, and Finance reports for the Healthcare department.
                             Gathered requirements, lead UAT, and orchestrated Go-Live plan of over 10 compensation and bonus reports for the Field Operations Finance team.
                             Managed the retirement and migration of 100+ Windows 2008 servers across the firm.
                             Constructed department's production release notes providing Ecolab leadership with a high-level view of business impact from completed development.
                         </li>
                     </ul>
-                    <li class="job-skills">Skills/Tools Utilized: PowerBI, SQL, Excel, DevOps, AdobeXD</li>
+                    <li>Skills/Tools Utilized: PowerBI, SQL, Excel, DevOps, AdobeXD</li>
                 </ul>
-                <ul class="role solid-black-border">IT Intern, Ecolab
-                    <ul class="job-overview">Job Overview
-                        <li class="job-desc">Built a PowerBI dashboard highlighting the computational costs associated with Microsoft Azure resulting in optimizations, saving the IT department over $50,000 in under 4 months.
+                <ul class="role solid-black-border title"><p class="title">IT Intern, Ecolab</p>
+                    <ul class="detail-toggle">Job Overview
+                        <li class="hidden">Built a PowerBI dashboard highlighting the computational costs associated with Microsoft Azure resulting in optimizations, saving the IT department over $50,000 in under 4 months.
                             Served in Project Manager, Business Analyst, and BI Developer roles assisting in the development of 60+ enterprise reports.
                         </li>
                     </ul>
                     <li>Tech Stack: PowerBI, Excel, DevOps</li>
                 </ul>
-                <ul class="role solid-black-border">Electrical Engineering Intern, Astronautics Corporation of America
-                    <ul clsas="job-overviews">Job Overview
-                        <li class="job-desc">Utilized Excel VBA to analyze over 10,000 flight records to verify the failure rates of electrical components found in the company's Aerospace and Astronautic products.
+                <ul class=" solid-black-border title"><h2 class="title">Electrical Engineering Intern, Astronautics Corporation of America</h2>
+                    <ul class="detail-toggle">Job Overview
+                        <li class="hidden">Utilized Excel VBA to analyze over 10,000 flight records to verify the failure rates of electrical components found in the company's Aerospace and Astronautic products.
                         </li>
                     </ul>
-                    <li class="job-skills">Tech Stack: Excel, VBA</li>
+                    <li>Tech Stack: Excel, VBA</li>
                 </ul>
             </ul>    
         </div>
         <div class="personal-projects">
             <ul class="section-header">Side Projects
-                <ul class="project solid-black-border">Project 1: Personal Website
-                    <ul>Project Overview
+                <ul class="solid-black-border"><p class="title">Project 1: Personal Website</p>
+                    <ul class="detail-toggle">Project Overview
                         <li>I built a personal website to provide insight on all my professional-related development. 
                             This is an effort to showcase what I've been able to accomplish in a proffessional setting as well some of my interests outside of my day to day. Please enjoy! 
                         </li>
                     </ul>
                     <li>Tech Stack: JavaScript, HTML, CSS, Git</li>
                 </ul>
-                <ul class="project solid-black-border">Project 2: Pokemon Comparison
-                    <ul>Brief Project Description
+                <ul class="solid-black-border"><p class="title">Project 2: Pokemon Comparison</p>
+                    <ul class="detail-toggle">Brief Project Description
                         <li>I built a model in python that compares male and female soccer players to their equivalent in the Pokemon (gen 1) universe. 
                             This model utilizes over X many (non-physical) features to analyze and predict their equivalent. 
                             The goal of this project is to showcase my ability to work with mulitple large datasets, understand basic concepts in Python and Pandas, and most importantly find a fun project to complete in Python.
@@ -87,8 +104,8 @@
                     <li>Tech Stack: Python, Pandas, JavaScript, HMTL, CSS, Git,</li>
                     <li><a href="#">Link to site</a></li>
                 </ul>
-                <ul class="project solid-black-border">Project 3: Recipe Converter
-                    <ul>Brief Project Description
+                <ul class="solid-black-border"><p class="title">Project 3: Recipe Converter</p>
+                    <ul class="detail-toggle">Brief Project Description
                         <li>This project was a last minute addition inspired by the frustration of finding holiday related recipes for a gathering with my friends.
                             All online recipes seem to have a horrible habit of wrapping a simple list of ingredients and steps with a 1000 word life story of the writer. 
                             The sole purpose of this website is to eliminate the bullshit that encompasses these great recipes. 
@@ -99,14 +116,14 @@
                 </ul>
             </ul>
         </div>
-        <div class="contact">
-            <ul class="section-header">Contact Information
+        <div>
+            <div>
+                <p>A Brooklyn based Data Analyst aspiring to transition their career into Web Development.</p>
+            </div>
+            <ul >Contact Information
                 <li class="link solid-black-border"><a href="https://www.linkedin.com/in/zmadson/">Github</a></li>
                 <li class="link solid-black-border"><a href="https://www.linkedin.com/in/zmadson/">LinkedIn</a></li>
                 <li class="link solid-black-border"><a href="#">Resume</a></li>
-                <li class="link solid-black-border"><a href="#">Recipe Reducer</a></li>
-                <li class="link solid-black-border"><a href="#">Project 2</a></li>
-                <li class="link solid-black-border"> <a href="#">Project 3</a></li>
             </ul> 
         </div>
     </body>
